testsuite/tests/parser/should_fail/readFail005.hs
module Tests where

-- this char is forbidden
c = '\&'
