testsuite/tests/parser/should_fail/readFail005.stderr

readFail005.hs:4:7: error: [GHC-21231]
    lexical error in string/character literal at character '&'
